<resources>
    <string name="app_name">CalculadoraPropina</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTotal">Total:</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip20">20%</string>
    <string name="tipText">Propina:</string>
    <string name="zero">0.00</string>
    <string name="totalText">Total:</string>
    <string name="custom">Otro:</string>
</resources>
