<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PropinaActivity">


    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billTotal"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            />
        <EditText
            android:id="@+id/billEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            />
    </TableRow>




    <!-- Renglon UNO -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip10"
            android:textColor="#000"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip15"
            android:textColor="#000"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip20"
            android:textColor="#000"
            android:layout_weight="1"
            android:gravity="center"
            />
    </TableRow>



    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipText"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/tip10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />

        <EditText
            android:id="@+id/tip15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />

        <EditText
            android:id="@+id/tip20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />


    </TableRow>





    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalText"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            />

        <EditText
            android:id="@+id/total10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />

        <EditText
            android:id="@+id/total15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />

        <EditText
            android:id="@+id/total20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />


    </TableRow>






    <!-- Renglon CUATRO -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:textColor="#000"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            />
        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:progress="18"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:layout_span="2"
            />
        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18%"
            android:textColor="#000"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            />
    </TableRow>







    <!-- Renglon CINCO -->
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipText"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/tipCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalText"
            android:textColor="#000"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/totalCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="center"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="14sp"
            android:cursorVisible="false"
            android:longClickable="false"
            />
    </TableRow>












</TableLayout>
